# sim

./: .gitignore  Cargo.toml  README.md  flake.nix  out
benches/: sim_benchmark.rs
nix/: flake.nix
nix/shell/: default.nix
src/: main.rs
src/lib/: cosine.rs  mod.rs  tf_idf.rs
