[package]
name = "sim"
version = "0.1.0"
edition = "2024"

[lib]
name = "libsim"
path = "src/lib/mod.rs"

[dependencies]
rayon = {version = "1.10.0", default-features = false}
dhat = {version = "0.3.3", optional = true}

[dev-dependencies]
criterion = "0.6.0"
rand_chacha = "0.9.0"
lipsum = "0.9.1"

[[bench]]
name = "sim_benchmark"
harness = false

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.debug-release]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dep:dhat"]
dhat-ad-hoc = ["dep:dhat"]
